--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,4 +6,8 @@
     ::selection {
         @apply bg-black bg-opacity-20
     }
+
+    h1, h2, h3, h4, h5, h6 {
+        @apply font-['Ubuntu'];
+    }
 }
