--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,7 +11,7 @@
         @apply font-['Ubuntu'];
     }
 
-    .lp-feature {
+    .bg-feature {
         background: linear-gradient(90deg, rgba(108, 119, 164, 0.50) 0%, rgba(41, 45, 62, 0.50) 100%);;
     }
 }
